==> Luos-io/luos_engine/Network/Robus/HAL/ATSAMD21/luos_hal.c <==
#include "luos_hal.h"
#include <stdbool.h>
#include <string.h>
#include "reception.h"
#include "context.h"
#define DEFAULT_TIMEOUT 20
#define TIMEOUT_ACK     DEFAULT_TIMEOUT / 4

static void LuosHAL_FlashEraseLuosMemoryInfo(void)
{
    uint32_t address            = ADDRESS_ALIASES_FLASH;
    NVMCTRL_REGS->NVMCTRL_ADDR  = address >> 1;
    NVMCTRL_REGS->NVMCTRL_CTRLA = NVMCTRL_CTRLA_CMD_ER_Val | NVMCTRL_CTRLA_CMDEX_KEY;
    NVMCTRL_REGS->NVMCTRL_ADDR  = (address + 256) >> 1;
    NVMCTRL_REGS->NVMCTRL_CTRLA = NVMCTRL_CTRLA_CMD_ER_Val | NVMCTRL_CTRLA_CMDEX_KEY;
    NVMCTRL_REGS->NVMCTRL_ADDR  = (address + 512) >> 1;
    NVMCTRL_REGS->NVMCTRL_CTRLA = NVMCTRL_CTRLA_CMD_ER_Val | NVMCTRL_CTRLA_CMDEX_KEY;
    NVMCTRL_REGS->NVMCTRL_ADDR  = (address + 768) >> 1;
    NVMCTRL_REGS->NVMCTRL_CTRLA = NVMCTRL_CTRLA_CMD_ER_Val | NVMCTRL_CTRLA_CMDEX_KEY;
}

void LuosHAL_FlashWriteLuosMemoryInfo(uint32_t addr, uint16_t size, uint8_t *data)
{
    uint32_t i         = 0;
    uint32_t *paddress = (uint32_t *)addr;

    // Before writing we have to erase the entire page
    // to do that we have to backup current falues by copying it into RAM
    uint8_t page_backup[16 * PAGE_SIZE];
    memcpy(page_backup, (void *)ADDRESS_ALIASES_FLASH, 16 * PAGE_SIZE);

    // Now we can erase the page
    LuosHAL_FlashEraseLuosMemoryInfo();

    // Then add input data into backuped value on RAM
    uint32_t RAMaddr = (addr - ADDRESS_ALIASES_FLASH);
    memcpy(&page_backup[RAMaddr], data, size);

    /* writing 32-bit data into the given address */
    for (i = 0; i < (PAGE_SIZE / 4); i++)
    {
        *paddress++ = page_backup[i];
    }

    /* Set address and command */
    NVMCTRL_REGS->NVMCTRL_ADDR = addr >> 1;

    NVMCTRL_REGS->NVMCTRL_CTRLA = NVMCTRL_CTRLA_CMD_WP | NVMCTRL_CTRLA_CMDEX_KEY;
}

void LuosHAL_SetMode(uint8_t mode)
{
    uint32_t data_to_write = ~BOOT_MODE_MASK | (mode << BOOT_MODE_OFFSET);
    uint32_t address       = SHARED_MEMORY_ADDRESS;
    uint32_t *paddress     = (uint32_t *)address;

    // erase shared mem sector
    NVMCTRL_REGS->NVMCTRL_ADDR  = address >> 1;
    NVMCTRL_REGS->NVMCTRL_CTRLA = NVMCTRL_CTRLA_CMD_ER_Val | NVMCTRL_CTRLA_CMDEX_KEY;

    // write 32 bits data into 64B page buffer
    *paddress = data_to_write;

    /* Set address and command */
    NVMCTRL_REGS->NVMCTRL_ADDR  = address >> 1;
    NVMCTRL_REGS->NVMCTRL_CTRLA = NVMCTRL_CTRLA_CMD_WP | NVMCTRL_CTRLA_CMDEX_KEY;
}

void LuosHAL_SaveNodeID(uint16_t node_id)
{
    uint32_t address       = SHARED_MEMORY_ADDRESS;
    uint32_t *paddress     = (uint32_t *)address;
    uint32_t saved_data    = *paddress;
    uint32_t data_tmp      = ~NODE_ID_MASK | (node_id << NODE_ID_OFFSET);
    uint32_t data_to_write = saved_data & data_tmp;

    // erase shared mem sector
    NVMCTRL_REGS->NVMCTRL_ADDR  = address >> 1;
    NVMCTRL_REGS->NVMCTRL_CTRLA = NVMCTRL_CTRLA_CMD_ER_Val | NVMCTRL_CTRLA_CMDEX_KEY;

    // write 32 bits data into 64B page buffer
    *paddress = data_to_write;

    /* Set address and command */
    NVMCTRL_REGS->NVMCTRL_ADDR  = address >> 1;
    NVMCTRL_REGS->NVMCTRL_CTRLA = NVMCTRL_CTRLA_CMD_WP | NVMCTRL_CTRLA_CMDEX_KEY;
}

void LuosHAL_EraseMemory(uint32_t address, uint16_t size)
{
    uint32_t erase_address  = APP_ADDRESS;
    const uint32_t row_size = 256;

    for (erase_address = APP_ADDRESS; erase_address < ADDRESS_LAST_PAGE_FLASH; erase_address += row_size)
    {
        // wait if NVM controller is busy
        while ((NVMCTRL_REGS->NVMCTRL_INTFLAG & NVMCTRL_INTFLAG_READY_Msk) == 0)
            ;
        // erase row
        NVMCTRL_REGS->NVMCTRL_ADDR  = erase_address >> 1;
        NVMCTRL_REGS->NVMCTRL_CTRLA = NVMCTRL_CTRLA_CMD_ER_Val | NVMCTRL_CTRLA_CMDEX_KEY;
        // wait during erase
        while ((NVMCTRL_REGS->NVMCTRL_INTFLAG & NVMCTRL_INTFLAG_READY_Msk) == 0)
            ;
    }
}

void LuosHAL_ProgramFlash(uint32_t address, uint16_t size, uint8_t *data)
{
    uint32_t *paddress  = (uint32_t *)address;
    uint32_t data_index = 0;
    uint8_t page_index  = 0;

    // wait if NVM controller is busy
    while ((NVMCTRL_REGS->NVMCTRL_INTFLAG & NVMCTRL_INTFLAG_READY_Msk) == 0)
        ;

    while (data_index < size)
    {
        // set addr in NVM register
        NVMCTRL_REGS->NVMCTRL_ADDR = (uint32_t)&data[data_index] >> 1;
        // fill page buffer with data bytes
        for (page_index = 0; page_index < 16; page_index++)
        {
            // break if all data had been written
            if (data_index >= size)
                break;
            // write data
            *paddress = *(uint32_t *)&data[data_index];
            // update address
            paddress += 1;
            data_index += 4;
        }
        // Set address and command
        NVMCTRL_REGS->NVMCTRL_CTRLA = NVMCTRL_CTRLA_CMD_WP | NVMCTRL_CTRLA_CMDEX_KEY;
        // wait during programming
        while ((NVMCTRL_REGS->NVMCTRL_INTFLAG & NVMCTRL_INTFLAG_READY_Msk) == 0)
            ;
    }
}
